--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,6 @@
 {% block head_block %}
     <link rel="stylesheet" type="text/css" href="{% static "CSS/NormalPageStyle.css" %}"/>
 {% endblock %}
-<!-- asdkaskbaskjb --> 
 {% block body_block %}
     <div class="mainpage">
         <left>
@@ -20,6 +19,9 @@
                              width="150px"/>
                         <h4>Welcome, {{ user.get_username }}</h4>
                         <a href="{% url 'logout' %}">Logout</a></br>
+                        {% if user.userprofile.status == 2 %}
+                            <a href= {% url 'your_restaurant' %}> Your Restaurants </a><br>
+                        {% endif %}
                     </div>
                 {% else %}
                     <div style="text-align: center">
@@ -31,13 +33,10 @@
                         <a href="{% url 'registration' %}">Register</a>
                     </div>
                 {% endif %}
-                
-                <div style="text-align: center"><br>
-                <a href = {% url 'index' %}> Index </a><br><br>
-                {%  if user.userprofile.status == 2 %}
-                    <a href = {% url 'your_restaurant' %}> Your Restaurant </a><br>
-                {%  endif %}
-                 </div>
+
+            <div style="text-align: center"><br>
+                <a href= {% url 'index' %}> Index </a><br><br>
+            </div>
             <!--end UserProfile-->
             </p>
         </left>
@@ -54,53 +53,53 @@
         <div class="middle"><br></div>
 
 
-            {% if RestaurantList %}
-                {% for Restaurant in RestaurantList %}
-                    {% if Restaurant.status != 0 %}
-                        <section class="restaurant_item">
-                            <p class="center">
-                            <table>
-                                <tr>
-                                    <td class="Rimage">
-                                        <img src="{{ Restaurant.photo.url }}" alt="{{ Restaurant.name }}Photo"/>
+        {% if RestaurantList %}
+            {% for Restaurant in RestaurantList %}
+                {% if Restaurant.status != 0 %}
+                    <section class="restaurant_item">
+                        <p class="center">
+                        <table>
+                            <tr>
+                                <td class="Rimage">
+                                    <img src="{{ Restaurant.photo.url }}" alt="{{ Restaurant.name }}Photo"/>
 
-                                    </td>
-                                    <td class="Rinfo">
-                                        <table>
-                                            <tr>
-                                                <td class="Rinfo_header">Name:</td>
-                                                <td>{{ Restaurant.name }}</td>
-                                            </tr>
-                                            <tr>
-                                                <td class="Rinfo_header">Cuisine:</td>
-                                                <td>{{ Restaurant.get_cuisine_display }}</td>
-                                            </tr>
-                                            <tr>
-                                                <td class="Rinfo_header">Address:</td>
-                                                <td>{{ Restaurant.streetAddress }}</td>
-                                            </tr>
-                                            <tr>
-                                                <td class="Rinfo_header">PriceRange:</td>
-                                                <td>{{ Restaurant.get_priceRange_display }}</td>
-                                            </tr>
-                                            <tr>
-                                                <td class="Rinfo_header">Opening Hour:</td>
-                                                <td>{{ Restaurant.openingHour }}</td>
-                                            </tr>
-                                        </table>
-                                </tr>
                                 </td>
-                            </table>
-                            <a href="{% url 'restaurant' Restaurant.resID %}" class="center">More Information</a></br>
-                            </br>
-                            </p>
-                        </section>
-                        <div class="middle"><br></div>
-                    {% endif %}
-                {% endfor %}
-            {% else %}
-                <section><strong>Opps, Look like we do not have any restaurant yet!</strong></section>
-            {% endif %}
+                                <td class="Rinfo">
+                                    <table>
+                                        <tr>
+                                            <td class="Rinfo_header">Name:</td>
+                                            <td>{{ Restaurant.name }}</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="Rinfo_header">Cuisine:</td>
+                                            <td>{{ Restaurant.get_cuisine_display }}</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="Rinfo_header">Address:</td>
+                                            <td>{{ Restaurant.streetAddress }}</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="Rinfo_header">PriceRange:</td>
+                                            <td>{{ Restaurant.get_priceRange_display }}</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="Rinfo_header">Opening Hour:</td>
+                                            <td>{{ Restaurant.openingHour }}</td>
+                                        </tr>
+                                    </table>
+                            </tr>
+                            </td>
+                        </table>
+                        <a href="{% url 'restaurant' Restaurant.resID %}" class="center">More Information</a></br>
+                        </br>
+                        </p>
+                    </section>
+                    <div class="middle"><br></div>
+                {% endif %}
+            {% endfor %}
+        {% else %}
+            <section><strong>Opps, Look like we do not have any restaurant yet!</strong></section>
+        {% endif %}
 
     </div>
 {% endblock %}
