--- a/templates/base.html
+++ b/templates/base.html
@@ -56,6 +56,7 @@
     <!--In text CSS to make sure the base do not effect other pages -->
     <HR size="2" width="90%">
     <h2><a href="{% url 'about' %}">About the site</a><br></h2>
+    <h2><a href="{% url 'index' %}">Return to Homepage</a><br></h2>
     The Website Was Made By </br>Yuk Fai Wong, Nhut Minh Vo, Alex Marshall, Ho Yan Lew
 </div>
 </body>
