--- a/templates/addRestaurant.html
+++ b/templates/addRestaurant.html
@@ -6,15 +6,52 @@
 	<link rel="stylesheet" type="text/css" href="{% static "CSS/AddRestaurant.css" %}" />
 
 {% block body_block %}
-	<div>
-		<H2>Add Restaurant</H2>
-		<form action="{% url 'addRestaurant' %}" id="addRestaurant_form" enctype="multipart/form-data", 
-		method="POST", >
-			<table>
-				<td></td>
-			</table>	
-			<input type="submit" name="submit" value="Add Restaurant">
-		</form>
-	</div>
-
+<div class="center">
+<form id="AddRestaurant" method="post" action="{% url 'addRestaurant' %}" enctype="multipart/form-data">
+{% csrf_token %}
+Upload Photo: <input type="file" name="photo" accept="image/*"><br>
+<table >
+ <tr>
+ 	<td>Category<td>
+ 	<td><td>
+ </tr>
+  <tr>
+ 	<td>Name<td>
+ 	<td><input type="text" name="name" width="48" size="50" value='{{ RestaurantList.name }}' required/><td>
+ </tr>
+  <tr>
+ 	<td>Cuisine<td>
+ 	<td><select name="cuisine">
+  <option value ='WE'>Western</option>
+  <option value='AS'>Asian</option>
+  <option value='ME'>Middle Eastern</option>
+</select><td>
+ </tr>
+  <tr>
+ 	<td>Address<td>
+ 	<td><input type="text" name="address" width="48" size="50" value='{{ RestaurantList.streetAddress }}' required /><td>
+ </tr>
+   <tr>
+ 	<td>Price Rang<td>
+ 	<td><select name="Price">
+ 	<option value =0>Not Rated</option>
+  <option value=1>Low Price</option>
+  <option value=2>Affordable</option>
+  <option value=3>Fancy</option></select><td>
+ </tr>
+   <tr>
+ 	<td>OpeningHour<td>
+ 	<td><input type="text" name="OH" width="48" size="50" required value='{{ RestaurantList.openingHour }}'/><td>
+ </tr>
+   <tr>
+ 	<td>Status:<td>
+ 	<td><select name="status">
+ 	<option value =1>Open</option>
+  <option value=-1>Closed</option>
+</select><td>
+ </tr>
+</table>
+ <input id="submit" type="submit" name="Submit">
+<form>
+</div>
 {% endblock %}
