Typo on reg page

--- a/templates/registration.html
+++ b/templates/registration.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 
-{% bloc_k title_block %}
+{% block title_block %}
 	EatGlasgow-Registration
 {% endblock %} 
 
