--- a/static/CSS/Registration.css
+++ b/static/CSS/Registration.css
@@ -1,23 +1,62 @@
 .helptext {
-	display:none	
+	display:none
 }
 
-table { 
+table {
 	text-align: left;
-	margin: 0 auto; 
+	margin: 0 auto;
 }
 form {
 	text-align: center;
-	margin: 0 auto; 
+	margin: 0 auto;
 }
 .registration {
-	margin: 0 auto; 
+	margin: 0 auto;
 	height: 500px;
 	width: 768px;
-	background-color: #FFFFFF;
-	border: 1px solid #999;
+	 background-color: #949494;
+    background: rgba(255, 255, 255, 0.3);
+    background-size: cover;
+    border: 5px solid #7a7a7a;
+    border-radius: 25px;
+    padding: 10px;
 }
 
 .center {
 	text-align: center;
+}
+
+
+.global {
+    background-color: #935d8c;
+    background-image: url('../assets/css/images/overlay.png'), -moz-linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
+    background-image: url('../assets/css/images/overlay.png'), -webkit-linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
+    background-image: url('../assets/css/images/overlay.png'), -ms-linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
+    background-image: url('../assets/css/images/overlay.png'), linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
+}
+
+.searchBar {
+    margin-left: 30%;
+    margin-right: 30%;
+    text-align: center;
+    background-color: transparent;
+    border: 1px hidden #999;
+}
+
+.searchBar form {
+    margin-left: 25%;
+    margin-right: 25%;
+    width: inherit;
+    align-content: center;
+    padding: 5px;
+}
+
+.searchBar form input {
+    max-width: 100%;
+    width: inherit;
+    padding-left: 1px;
+    padding-right: 1px;
+    border-radius: 25px;
+    border: 2px solid #73AD21;
+    padding: 5px;
 }
