CSS FIXED WILDY

--- a/static/CSS/Edit_restaurant.css
+++ b/static/CSS/Edit_restaurant.css
@@ -2,3 +2,36 @@
 	max-width:50%;
     margin: 0 auto;
 }
+
+.global{
+    background-color: #935d8c;
+		background-image: url('../assets/css/images/overlay.png'), -moz-linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
+		background-image: url('../assets/css/images/overlay.png'), -webkit-linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
+		background-image: url('../assets/css/images/overlay.png'), -ms-linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
+		background-image: url('../assets/css/images/overlay.png'), linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
+}
+
+
+.searchBar {
+    margin-left: 30%;
+    margin-right: 30%;
+    text-align: center;
+    background-color: transparent;
+    border: 1px hidden #999;
+}
+.searchBar form{
+    margin-left: 25%;
+    margin-right: 25%;
+    width: inherit;
+    align-content: center;
+    padding: 5px;
+}
+.searchBar form input{
+    max-width: 100%;
+    width: inherit;
+    padding-left: 1px;
+    padding-right: 1px;
+    border-radius: 25px;
+    border: 2px solid #73AD21;
+    padding: 5px;
+}
