--- a/templates/addRestaurant.html
+++ b/templates/addRestaurant.html
@@ -2,57 +2,74 @@
 {% load staticfiles %}
 
 {% block title_block %} Add Restaurant {% endblock %}
-
-	<link rel="stylesheet" type="text/css" href="{% static "CSS/AddRestaurant.css" %}" />
-
+{% block head_block %}
+    <link rel="stylesheet" type="text/css" href="{% static "CSS/addRestaurant.css" %}"/>
+{% endblock %}
 {% block body_block %}
-<div class="center">
-<form id="AddRestaurant" method="post" action="{% url 'addRestaurant' %}" enctype="multipart/form-data">
-{% csrf_token %}
-Upload Photo: <input type="file" name="photo" accept="image/*"><br>
-<table >
- <tr>
- 	<td>Category<td>
- 	<td><td>
- </tr>
-  <tr>
- 	<td>Name<td>
- 	<td><input type="text" name="name" width="48" size="50" value='{{ RestaurantList.name }}' required/><td>
- </tr>
-  <tr>
- 	<td>Cuisine<td>
- 	<td><select name="cuisine">
-  <option value ='WE'>Western</option>
-  <option value='AS'>Asian</option>
-  <option value='ME'>Middle Eastern</option>
-</select><td>
- </tr>
-  <tr>
- 	<td>Address<td>
- 	<td><input type="text" name="address" width="48" size="50" value='{{ RestaurantList.streetAddress }}' required /><td>
- </tr>
-   <tr>
- 	<td>Price Rang<td>
- 	<td><select name="Price">
- 	<option value =0>Not Rated</option>
-  <option value=1>Low Price</option>
-  <option value=2>Affordable</option>
-  <option value=3>Fancy</option></select><td>
- </tr>
-   <tr>
- 	<td>OpeningHour<td>
- 	<td><input type="text" name="OH" width="48" size="50" required value='{{ RestaurantList.openingHour }}'/><td>
- </tr>
-   <tr>
- 	<td>Status:<td>
- 	<td><select name="status">
- 	<option value =1>Open</option>
-  <option value=-1>Closed</option>
-</select><td>
- </tr>
-</table>
- <input id="submit" type="submit" name="Submit">
-<form>
-</div>
+    <div class="center">
+        <form id="AddRestaurant" method="post" action="{% url 'addRestaurant' %}" enctype="multipart/form-data">
+            {% csrf_token %}
+            Upload Photo: <input type="file" name="photo" accept="image/*"><br>
+            <table>
+                <tr>
+                    <td>Category
+                    <td>
+                    <td>
+                    <td>
+                </tr>
+                <tr>
+                    <td>Name
+                    <td>
+                    <td><input type="text" name="name" width="48" size="50" value='{{ RestaurantList.name }}' required/>
+                    <td>
+                </tr>
+                <tr>
+                    <td>Cuisine
+                    <td>
+                    <td><select name="cuisine">
+                        <option value='WE'>Western</option>
+                        <option value='AS'>Asian</option>
+                        <option value='ME'>Middle Eastern</option>
+                    </select>
+                    <td>
+                </tr>
+                <tr>
+                    <td>Address
+                    <td>
+                    <td><input type="text" name="address" width="48" size="50"
+                               value='{{ RestaurantList.streetAddress }}' required/>
+                    <td>
+                </tr>
+                <tr>
+                    <td>Price Rang
+                    <td>
+                    <td><select name="Price">
+                        <option value=0>Not Rated</option>
+                        <option value=1>Low Price</option>
+                        <option value=2>Affordable</option>
+                        <option value=3>Fancy</option>
+                    </select>
+                    <td>
+                </tr>
+                <tr>
+                    <td>OpeningHour
+                    <td>
+                    <td><input type="text" name="OH" width="48" size="50" required
+                               value='{{ RestaurantList.openingHour }}'/>
+                    <td>
+                </tr>
+                <tr>
+                    <td>Status:
+                    <td>
+                    <td><select name="status">
+                        <option value=1>Open</option>
+                        <option value=-1>Closed</option>
+                    </select>
+                    <td>
+                </tr>
+            </table>
+            <input id="submit" type="submit" name="Submit">
+            <form>
+    </div>
 
 {% endblock %}
